--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Index</title>
-</head>
-<body>
-  <h1>Index</h1>
-</body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/public/favicon.ico"><title>demo_auth0</title><script defer="defer" src="/public/js/chunk-vendors.72e247b9.js"></script><script defer="defer" src="/public/js/app.38aae5c9.js"></script><link href="/public/css/chunk-vendors.a0dd538f.css" rel="stylesheet"><link href="/public/css/app.8933765a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but demo_auth0 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
